--- a/source.ipynb
+++ b/source.ipynb
@@ -1,5 +1,30 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'sf' was built under R version 4.4.1\"\n",
+      "Linking to GEOS 3.12.1, GDAL 3.8.4, PROJ 9.3.1; sf_use_s2() is TRUE\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "library(\"sf\")"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "R",
